# SP_Lab_4

./: CMakeLists.txt
src/: main.cpp
src/assets/: test.txt  text.txt
src/classes/factory/: factory.hpp
src/classes/stringSortingQueue/: stringSortingQueue.cpp  stringSortingQueue.hpp
src/classes/workQueue/: workQueue.cpp  workQueue.hpp
